[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInterface.gd" type="Script" id=1]
[ext_resource path="res://montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/scorched earth remastered.png" type="Texture" id=3]

[node name="UserInterface" type="Node2D"]
z_index = 100
script = ExtResource( 1 )

[node name="Top" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Top"]
margin_right = 1280.0
margin_bottom = 70.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="PlayerName" type="Label" parent="Top"]
margin_left = 14.2399
margin_top = 8.0
margin_right = 334.24
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Player name"
valign = 1

[node name="WeaponLabel" type="Label" parent="Top"]
margin_left = 680.0
margin_top = 8.0
margin_right = 1260.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Weapon-type"
align = 2
valign = 1

[node name="Bottom" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Bottom"]
margin_top = 650.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="AngleLabel" type="Label" parent="Bottom"]
margin_left = 20.0
margin_top = 658.536
margin_right = 340.0
margin_bottom = 710.536
custom_fonts/font = ExtResource( 2 )
text = "Angle: "

[node name="PowerLabel" type="Label" parent="Bottom"]
margin_left = 450.0
margin_top = 658.536
margin_right = 770.0
margin_bottom = 710.536
custom_fonts/font = ExtResource( 2 )
text = "Power:"

[node name="FuelLabel" type="Label" parent="Bottom"]
margin_left = 920.0
margin_top = 658.536
margin_right = 1240.0
margin_bottom = 710.536
custom_fonts/font = ExtResource( 2 )
text = "Fuel:"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 622.913, 39.3782 )
scale = Vector2( 1, 1.2 )
texture = ExtResource( 3 )

